# ik-agentic-ai-capstone1

./: .env.example  .gitignore  AI_Email_Assistant_Presentation.pptx  Dockerfile  README.md  generate_slides.py  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
config/: mcp.yaml
email_assistant/: __init__.py
email_assistant/data/tone_samples/: assertive.txt  casual.txt  formal.txt  friendly.txt  professional.txt
email_assistant/src/: __init__.py
email_assistant/src/agents/: draft_writer_agent.py  input_parser_agent.py  intent_detection_agent.py  personalization_agent.py  review_agent.py  router_agent.py  tone_stylist_agent.py
email_assistant/src/integrations/: cohere_client.py  config_loader.py  llm_factory.py  openai_client.py
email_assistant/src/memory/: __init__.py  profile_store.py  user_profiles.json
email_assistant/src/models/: schemas.py
email_assistant/src/ui/: streamlit_app.py
email_assistant/src/workflow/: langgraph_flow.py
tests/: conftest.py  test_eval_tone.py  test_personalization.py  test_profile_store.py  test_schemas.py  test_tone_stylist.py
